SIMPLEX-127 Refactor export service. SonarCube.